Fixed license deed attribute spacing, all attributes are at least 4em high -- fixed at 4em on IE6 due to lack of min-height property.

--- a/www/includes/deed3-ie.css
+++ b/www/includes/deed3-ie.css
@@ -18,3 +18,8 @@
 #deed-foot {
 	margin: 0 9px;
 }
+
+li.license {
+  height: 4em;
+}
+
