--- a/www/includes/deed3.css
+++ b/www/includes/deed3.css
@@ -342,7 +342,8 @@
 			list-style: none;
 			padding-bottom: 25px;
 			padding-left: 70px;
-			padding-top: 10px;
+			padding-top: 5px;
+      min-height: 4em;
 		}
 		
 		li.license ul.license-properties {
